--- a/src/libevp-agent/Makefile
+++ b/src/libevp-agent/Makefile
@@ -5,6 +5,7 @@
 PROJECTDIR = ../..
 
 include $(PROJECTDIR)/scripts/rules.mk
+-include $(PROJECTDIR)/.config
 
 MORE_CPPFLAGS = \
 	-IMQTT-C/include\
