Edge Virtualization Platform v1.44.0

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,18 +25,23 @@ on:
         description: The package namespace for docker images
         required: true
         type: string
-
-  schedule:
-    - cron: 0 0 * * 1-5
+  workflow_call:
+    inputs:
+      ref:
+        description: The ref sha to checkout evp-agent-oss
+        type: string
+        required: false
+        default: main
 
 concurrency:
   group: ${{ github.repository }}-${{ github.workflow }}@main-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
+
   infos:
     name: Infos
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-22.04
     outputs:
       package-namespace: ${{ steps.infos.outputs.namespace }}
     steps:
@@ -77,20 +82,33 @@ jobs:
       ref: ${{ inputs.ref || github.sha }}
       package-namespace: ${{ needs.infos.outputs.package-namespace }}
 
-  test-modules:
-    name: Test-modules
+  build-sdk:
+    name: Build
     needs:
       - checks
       - builder
       - infos
-    uses: ./.github/workflows/test-modules.yml
+    uses: ./.github/workflows/build-sdk.yml
     secrets: inherit
     with:
       builder-tag: ${{ needs.builder.outputs.builder-tag }}
       ref: ${{ inputs.ref || github.sha }}
       package-namespace: ${{ needs.infos.outputs.package-namespace }}
 
-  build:
+  build-modules:
+    name: Build
+    needs:
+      - checks
+      - builder
+      - infos
+    uses: ./.github/workflows/build-modules.yml
+    secrets: inherit
+    with:
+      builder-tag: ${{ needs.builder.outputs.builder-tag }}
+      ref: ${{ inputs.ref || github.sha }}
+      package-namespace: ${{ needs.infos.outputs.package-namespace }}
+
+  build-agent:
     name: Build
     needs:
       - checks
@@ -102,3 +120,34 @@ jobs:
       builder-tag: ${{ needs.builder.outputs.builder-tag }}
       ref: ${{ inputs.ref || github.sha }}
       package-namespace: ${{ needs.infos.outputs.package-namespace }}
+
+  tests:
+    name: Tests
+    needs:
+      - checks
+      - build-sdk
+      - build-modules
+      - builder
+      - infos
+    uses: ./.github/workflows/test.yml
+    secrets: inherit
+    with:
+      builder-tag: ${{ needs.builder.outputs.builder-tag }}
+      ref: ${{ inputs.ref || github.sha }}
+      package-namespace: ${{ needs.infos.outputs.package-namespace }}
+
+  checkpoint-success:
+    if: ${{ always() }}
+    runs-on: ubuntu-22.04
+    needs:
+      - tests
+      - build-agent
+    steps:
+      - name: Check all previous jobs finished correctly
+        run: |
+          if [ "${{ needs.tests.result }}" = "success" ]; then
+            echo Requested jobs finished successfully. This PR can be merged
+          else
+            echo Requested jobs are failing. This PR can not be merged
+            exit 1
+          fi
