--- a/.github/workflows/build-sdk.yml
+++ b/.github/workflows/build-sdk.yml
@@ -29,7 +29,7 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ github.token }}
       options: ${{ startsWith(matrix.runner, 'buildjet') && '--user 1000:1001' || '--user 1001:127' }}
-    timeout-minutes: 8 # the worst case is 3 minutes
+    timeout-minutes: ${{ startsWith(matrix.runner, 'buildjet') && 20 || 8 }} # the worst case is 3 minutes but buildjet sometimes is slower downloading the docker image
     strategy:
       fail-fast: false
       matrix:
@@ -92,7 +92,7 @@ jobs:
 
       - name: Build Python package
         working-directory: src/python-evp-app-sdk
-        run: python3 -m build
+        run: make
 
       - name: SDK Debian package
         working-directory: src/python-evp-app-sdk
@@ -101,7 +101,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: python-sdk-${{ matrix.name }}-${{ matrix.platform }}-${{ github.run_id }}
-          path: src/python-evp-app-sdk/dist/*
+          path: lib/python/*
 
       - uses: actions/upload-artifact@v4
         with:
