--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ test/lorem-ipsum
 .venv/
 *.core
 /dist
+/src/python-evp-app-sdk/dist-stamp
 /src/sdkenc/stamp
 /src/sdkenc/*.h
 /include/sdkenc/*.h
