--- a/.github/workflows/build-modules.yml
+++ b/.github/workflows/build-modules.yml
@@ -34,7 +34,7 @@ on:
 
 jobs:
   build-modules:
-    name: Build modules (${{ matrix.name }}, ${{ matrix.platform }})
+    name: Modules (${{ matrix.name }}, ${{ matrix.platform }})
     runs-on: ${{ matrix.runner }}
     container:
       image: ghcr.io/${{ inputs.package-namespace }}/builder-${{ matrix.name }}:${{ inputs.builder-tag }}
@@ -47,13 +47,13 @@ jobs:
       matrix:
         include:
           - name: raspios-bookworm
-            runner: ${{ github.event.repository.private && 'buildjet-4vcpu-ubuntu-2204-arm' || 'ubuntu-24.04-arm' }}
+            runner: ${{ github.event.repository.private && 'buildjet-4vcpu-ubuntu-2204-arm' || 'ubuntu-22.04-arm' }}
             platform: arm64
           - name: ubuntu-noble
-            runner: ${{ github.event.repository.private && 'buildjet-4vcpu-ubuntu-2204-arm' || 'ubuntu-24.04-arm' }}
+            runner: ${{ github.event.repository.private && 'buildjet-4vcpu-ubuntu-2204-arm' || 'ubuntu-22.04-arm' }}
             platform: arm64
           - name: ubuntu-noble
-            runner: ${{ github.event.repository.private && 'buildjet-4vcpu-ubuntu-2204' || 'ubuntu-24.04' }}
+            runner: ${{ github.event.repository.private && 'buildjet-4vcpu-ubuntu-2204' || 'ubuntu-22.04' }}
             platform: amd64
 
     steps:
