--- a/.github/workflows/build-sdk.yml
+++ b/.github/workflows/build-sdk.yml
@@ -35,13 +35,13 @@ jobs:
       matrix:
         include:
           - name: raspios-bookworm
-            runner: ${{ github.event.repository.private && 'buildjet-4vcpu-ubuntu-2204-arm' || 'ubuntu-22.04-arm' }}
+            runner: ubuntu-22.04-4core-arm64
             platform: arm64
           - name: ubuntu-noble
-            runner: ${{ github.event.repository.private && 'buildjet-4vcpu-ubuntu-2204-arm' || 'ubuntu-22.04-arm' }}
+            runner: ubuntu-22.04-4core-arm64
             platform: arm64
           - name: ubuntu-noble
-            runner: ${{ github.event.repository.private && 'buildjet-4vcpu-ubuntu-2204' || 'ubuntu-22.04' }}
+            runner: ubuntu-22.04
             platform: amd64
 
     steps:
